# eiptnd

./: .gitignore  CMakeLists.txt
cmake/: utils.cmake
doc/: config.cfg.example
example/dispatcher_logger/: CMakeLists.txt  dispatcher_logger.cpp  dispatcher_logger.hpp
example/translator_echo/: CMakeLists.txt  echo_plugin.cpp  echo_plugin.hpp
include/: config.hpp  dptree.hpp  dptree_json.hpp  empty_ptree.hpp  log.hpp  plugin.def  plugin_api.hpp  plugin_info.hpp  relative_timer.hpp
include/plugin/: plugin_api.hpp  plugin_dispatcher.hpp  plugin_info.hpp  plugin_translator.hpp
plugins/dispatcher_redis/: CMakeLists.txt  dispatcher_redis.cpp  dispatcher_redis.hpp  redis_connection.cpp  redis_connection.hpp
plugins/translator_wialon/: CMakeLists.txt  wialon_plugin.cpp  wialon_plugin.hpp
src/: connection.cpp  connection.hpp  core.cpp  core.hpp  log.cpp  log.hpp  main.cpp  plugin_factory.cpp  plugin_factory.hpp  request_router.cpp  request_router.hpp  tcp_server.cpp  tcp_server.hpp  translator_manager.cpp  translator_manager.hpp
tools/: prepare.bat
